--- a/paper/Permutations.tex
+++ b/paper/Permutations.tex
@@ -319,53 +319,10 @@ usage in the rest of the code.
 Just like permutations from Agda's standard library, also \AgdaDatatype{\_\#\_}
 enjoys a number of expected (and useful) properties, such as symmetry. Among all
 properties, in the following we will make use of a specific one that connects
-context splitting and permutations: if $\Context \simeq A, \ContextD$, then
-$\Context$ must be a permutation of
-$A~\AgdaInductiveConstructor{∷}~\ContextD$.\Luca{Ci sono molte altre proprietà
-non descritte, controllare quelle che servono davvero.}
-
-\begin{code}%
-\>[0]\AgdaFunction{\#cons}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{≃}}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
-\\
-\>[0]\AgdaFunction{\#cons}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{+-empty-l}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[0]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{refl}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#refl}\<%
-\\
-\>[0]\AgdaFunction{\#cons}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
-\AgdaInductiveConstructor{\#here}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#cons}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{))}\<%
-\end{code}
+context splitting and permutations: if $\Splitting\ContextC\ContextD\ContextE$,
+then $\ContextC$ is a permutation of the concatenation of $\ContextD$ and
+$\ContextE$.\Luca{Ci sono molte altre proprietà non descritte, controllare
+quelle che servono davvero.}
 
 \begin{code}[hide]%
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
@@ -422,7 +379,7 @@ non descritte, controllare quelle che servono davvero.}
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{\#split}\AgdaSpace{}%
@@ -447,7 +404,7 @@ non descritte, controllare quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{Δ₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#next}\AgdaSpace{}%
@@ -458,7 +415,7 @@ non descritte, controllare quelle che servono davvero.}
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
 \AgdaBound{π}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{\#split}\AgdaSpace{}%
@@ -483,7 +440,7 @@ non descritte, controllare quelle che servono davvero.}
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Δ₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{π₁}\AgdaSpace{}%
@@ -493,17 +450,17 @@ non descritte, controllare quelle che servono davvero.}
 \\
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#here}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#here}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -511,17 +468,17 @@ non descritte, controllare quelle che servono davvero.}
 \\
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#here}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -529,17 +486,17 @@ non descritte, controllare quelle che servono davvero.}
 \\
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#here}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -547,17 +504,17 @@ non descritte, controllare quelle che servono davvero.}
 \\
 \>[0]\AgdaFunction{\#split}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#here}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#refl}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -712,10 +669,10 @@ non descritte, controllare quelle che servono davvero.}
 \AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
 \AgdaFunction{\#shift}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#here}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{+++\#}\AgdaSpace{}%
+\end{code}
+
+\begin{code}%
+\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
@@ -732,28 +689,29 @@ non descritte, controllare quelle che servono davvero.}
 \AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{\#}}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
-\\
-\>[0]\AgdaFunction{+++\#}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-e}\AgdaSpace{}%
+\end{code}
+\begin{code}[hide]%
+\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\AgdaInductiveConstructor{•}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#refl}\<%
 \\
-\>[0]\AgdaFunction{+++\#}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{+++\#}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{\#append}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{+++\#}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
+\>[0]\AgdaFunction{\#append}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{\#tran}\AgdaSpace{}%
 \AgdaFunction{\#shift}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{\#next}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{+++\#}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{\#append}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{))}\<%
 \\
 %
@@ -876,14 +834,14 @@ non descritte, controllare quelle che servono davvero.}
 \AgdaBound{Γ}\<%
 \\
 \>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-e}\AgdaSpace{}%
+\AgdaInductiveConstructor{•}\AgdaSpace{}%
 \AgdaInductiveConstructor{un-[]}\AgdaSpace{}%
 \AgdaInductiveConstructor{un-[]}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{un-[]}\<%
 \\
 \>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
 \AgdaBound{un₁}\AgdaSymbol{)}\AgdaSpace{}%
@@ -896,7 +854,7 @@ non descritte, controllare quelle che servono davvero.}
 \AgdaBound{un₂}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{\#un+}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un₁}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{un-∷}\AgdaSpace{}%
