--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -4,7 +4,7 @@
 \input{Type}
 \input{Context}
 \input{Permutations}
-% \input{Process}
+\input{Process}
 % \input{Congruence}
 % \input{Reduction}
 % \input{DeadlockFreedom}
