--- a/paper/main.tex
+++ b/paper/main.tex
@@ -14,6 +14,7 @@
 \usepackage{cleveref}
 \usepackage{newunicodechar}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 %%%%
 \input{macros}
 
@@ -50,6 +51,9 @@
 \newunicodechar{⟧}{\ensuremath\rrbracket}
 \newunicodechar{𝒞}{\ensuremath\ReductionContext}
 \newunicodechar{ℕ}{\ensuremath{\mathbb{N}}}
+\newunicodechar{≫}{\ensuremath\gg}
+\newunicodechar{≪}{\ensuremath\ll}
+% \newunicodechar{•}{\bullet}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
