--- a/paper/Process.lagda.tex
+++ b/paper/Process.lagda.tex
@@ -1,4 +1,5 @@
 \begin{code}[hide]
+{-# OPTIONS --rewriting #-}
 open import Data.Bool using (Bool; true; false; if_then_else_)
 open import Data.Product using (_×_; _,_; ∃; ∃-syntax)
 open import Relation.Binary.PropositionalEquality using (_≡_; refl; cong; cong₂)
@@ -17,8 +18,8 @@ CO-DE BRUIJN INDICES
 We adopt an \emph{intrinsically typed} representation of processes, so that a
 process is also a proof derivation showing that the process is well typed. This
 choice increases the effort in the definition of the datatypes for processes and
-their operational semantics, but it pays off in the rest of the formalization
-for a number of reasons:
+their operational semantics, but pays off in the rest of the formalization for a
+number of reasons:
 
 \begin{itemize}
 \item channel names are encoded in the context splitting proofs occurring within
@@ -33,10 +34,28 @@ We now illustrate the definition of the \AgdaDatatype{Process} datatype and
 describe each constructor in detail. The datatype is indexed by a typing
 context:
 
-\begin{AgdaAlign}
 \begin{code}
 data Process : Context → Set where
-   link      : ∀{Γ A B} (d : Dual A B) (p : Γ ≃ [ A ] + [ B ]) → Process Γ
+  link      : ∀{A Γ} → Γ ≃ [ A ] + [ dual A ] → Process Γ
+  fail      : ∀{Γ Δ} → Γ ≃ ⊤ , Δ → Process Γ
+  wait      : ∀{Γ Δ} → Γ ≃ ⊥ , Δ → Process Δ → Process Γ
+  close     : Process [ 𝟙 ]
+  case      : ∀{A B Γ Δ} → Γ ≃ A & B , Δ →
+              Process (A ∷ Δ) → Process (B ∷ Δ) → Process Γ
+  select    : ∀{A B Γ Δ} (x : Bool) → Γ ≃ A ⊕ B , Δ →
+              Process ((if x then A else B) ∷ Δ) → Process Γ
+  join      : ∀{A B Γ Δ} → Γ ≃ A ⅋ B , Δ → Process (B ∷ A ∷ Δ) → Process Γ
+  fork      : ∀{A B Γ Δ Γ₁ Γ₂} → Γ ≃ A ⊗ B , Δ → Δ ≃ Γ₁ + Γ₂ →
+              Process (A ∷ Γ₁) → Process (B ∷ Γ₂) → Process Γ
+  all       : ∀{A Γ Δ} → Γ ≃ `∀ A , Δ →
+              ((B : Type) → Process (subst [ B /_] A ∷ Δ)) → Process Γ
+  ex        : ∀{A B Γ Δ} → Γ ≃ `∃ A , Δ → Process (subst [ B /_] A ∷ Δ) → Process Γ
+  server    : ∀{A Γ Δ} → Γ ≃ `! A , Δ → Un Δ → Process (A ∷ Δ) → Process Γ
+  client    : ∀{A Γ Δ} → Γ ≃ `? A , Δ → Process (A ∷ Δ) → Process Γ
+  weaken    : ∀{A Γ Δ} → Γ ≃ `? A , Δ → Process Δ → Process Γ
+  contract  : ∀{A Γ Δ} → Γ ≃ `? A , Δ → Process (`? A ∷ `? A ∷ Δ) → Process Γ
+  cut       : ∀{A Γ Γ₁ Γ₂} → Γ ≃ Γ₁ + Γ₂ →
+              Process (A ∷ Γ₁) → Process (dual A ∷ Γ₂) → Process Γ
 \end{code}
 
 A \AgdaInductiveConstructor{link} process is well typed in a typing context with
@@ -45,34 +64,34 @@ $p$ that $\Context \simeq [A] + [B]$ instead of requiring $\Context$ to be
 simply $[A,B]$ so that it becomes straightforward to define \SLink using
 \AgdaFunction{dual-symm} and \AgdaFunction{+-comm}.
 
-\begin{code}
-   fail      : ∀{Γ Δ} (p : Γ ≃ ⊤ , Δ) → Process Γ
-\end{code}
+% \begin{code}
+%    fail      : ∀{Γ Δ} (p : Γ ≃ ⊤ , Δ) → Process Γ
+% \end{code}
 
 A \AgdaInductiveConstructor{fail} process simply requires the presence of $\Top$
 in the typing context.
 
-\begin{code}
-   close     : Process [ 𝟙 ]
-\end{code}
+% \begin{code}
+%    close     : Process  [ 𝟙 ]
+% \end{code}
 
 A \AgdaInductiveConstructor{close} process is well typed in the singleton
 context $[\One]$.
 
-\begin{code}
-   wait      : ∀{Γ Δ} (p : Γ ≃ ⊥ , Δ) → Process Δ → Process Γ
-\end{code}
+% \begin{code}
+%    wait      : ∀{Γ Δ} (p : Γ ≃ ⊥ , Δ) → Process Δ → Process Γ
+% \end{code}
 
 A \AgdaInductiveConstructor{wait} process is well typed in any context
 $\ContextC$ that contains $\Bot$ and whose residual $\ContextD$ allows the
 continuation to be well typed.
 
-\begin{code}
-   select    : ∀{Γ Δ A B} (x : Bool) (p : Γ ≃ A ⊕ B , Δ) →
-               Process ((if x then A else B) ∷ Δ) → Process Γ
-\end{code}
+% \begin{code}
+%    select    : ∀{A B Γ Δ} (x : Bool) (p : Γ ≃ A ⊕ B , Δ) →
+%                Process ((if x then A else B) ∷ Δ) → Process Γ
+% \end{code}
 
-We represent the tags $\InTag_1$ and $\InTag_2$ with Agda′s boolean values
+We represent the tags $\InTag_1$ and $\InTag_2$ with Agda's boolean values
 \AgdaInductiveConstructor{true} and \AgdaInductiveConstructor{false}. In this
 way we can use a single constructor \AgdaInductiveConstructor{select} for the
 selections $\Select\x{\InTag_i}.P$. According to the semantics of \Calculus, the
@@ -82,20 +101,20 @@ continuation channel, which is either $A$ or $B$ depending on the value of the
 tag $x$, is \emph{prepended} in front of the typing context used to type the
 continuation process.
 
-\begin{code}
-   case      : ∀{Γ Δ A B} (p : Γ ≃ A & B , Δ) →
-               Process (A ∷ Δ) → Process (B ∷ Δ) → Process Γ
-\end{code}
+% \begin{code}
+%    case      : ∀{A B Γ Δ} (p : Γ ≃ A & B , Δ) →
+%                Process (A ∷ Δ) → Process (B ∷ Δ) → Process Γ
+% \end{code}
 
 A \AgdaInductiveConstructor{case} process has two possible continuations. Note
 again that the continuation channel, which is received along with the tag, has
 either type $A$ or type $B$ depending on the tag and its type is prepended to
 the typing context of the continuation process since it is the newest channel.
 
-\begin{code}
-   fork      : ∀{Γ Δ Γ₁ Γ₂ A B} (p : Γ ≃ A ⊗ B , Δ) (q : Δ ≃ Γ₁ + Γ₂) →
-               Process (A ∷ Γ₁) → Process (B ∷ Γ₂) → Process Γ
-\end{code}
+% \begin{code}
+%    fork      : ∀{A B Γ Δ Γ₁ Γ₂} (p : Γ ≃ A ⊗ B , Δ) (q : Δ ≃ Γ₁ + Γ₂) →
+%                Process (A ∷ Γ₁) → Process (B ∷ Γ₂) → Process Γ
+% \end{code}
 
 A \AgdaInductiveConstructor{fork} process creates two fresh continuation
 channels and spaws two continuation processes. Since context splitting is a
@@ -103,10 +122,10 @@ ternary relation, we need two splitting proofs $p$ and $q$ to isolate the type
 $A \Ten B$ of channel on which the pair of continuation channels is sent and to
 distribute the remaining channel across the two continuation processes.
 
-\begin{code}
-   join      : ∀{Γ Δ A B} (p : Γ ≃ A ⅋ B , Δ) →
-               Process (B ∷ A ∷ Δ) → Process Γ
-\end{code}
+% \begin{code}
+%    join      : ∀{A B Γ Δ} (p : Γ ≃ A ⅋ B , Δ) → Process (B ∷ A ∷ Δ) →
+%                Process Γ
+% \end{code}
 
 The \AgdaInductiveConstructor{join} process has a single continuation which uses
 the pair of continuation channels received from a channel of type $A \Par B$.
@@ -116,10 +135,10 @@ standpoint, both continuations are bound simultaneously. We could have prepended
 the types $A$ and $B$ also in the opposite order, provided that the reduction
 rule \RFork (formalized in \Cref{sec:reduction-agda}) is suitably adjusted.
 
-\begin{code}
-   server    : ∀{Γ Δ A} (p : Γ ≃ ¡ A , Δ) (un : Un Δ) →
-               Process (A ∷ Δ) → Process Γ
-\end{code}
+% \begin{code}
+%    server    : ∀{A Γ Δ} (p : Γ ≃ `! A , Δ) (un : Un Δ) →
+%                Process (A ∷ Δ) → Process Γ
+% \end{code}
 
 A \AgdaInductiveConstructor{server} constructor introduces a channel of type
 $\OfCourse A$ given a continuation process that consumes a channel of type $A$
@@ -127,11 +146,12 @@ and a proof $\mathit{un}$ that every other channel in $\ContextD$ is
 unrestricted.\Luca{Introdurre terminologia e dire che unrestricted vuol dire che
 il canale può essere ``duplicato'' e scartato.}
 
-\begin{code}
-   client    : ∀{Γ Δ A} (p : Γ ≃ ¿ A , Δ) → Process (A ∷ Δ) → Process Γ
-   weaken    : ∀{Γ Δ A} (p : Γ ≃ ¿ A , Δ) → Process Δ → Process Γ
-   contract  : ∀{Γ Δ A} (p : Γ ≃ ¿ A , Δ) → Process (¿ A ∷ ¿ A ∷ Δ) → Process Γ
-\end{code}
+% \begin{code}
+%    client    : ∀{A Γ Δ} (p : Γ ≃ `? A , Δ) → Process (A ∷ Δ) → Process Γ
+%    weaken    : ∀{A Γ Δ} (p : Γ ≃ `? A , Δ) → Process Δ → Process Γ
+%    contract  : ∀{A Γ Δ} (p : Γ ≃ `? A , Δ) → Process (`? A ∷ `? A ∷ Δ) →
+%                Process Γ
+% \end{code}
 
 The constructors \AgdaInductiveConstructor{client},
 \AgdaInductiveConstructor{weaken} and \AgdaInductiveConstructor{contract}
@@ -145,16 +165,19 @@ continuation process. In a pen-and-paper presentation, like the one by
 Wadler~\citep{Wadler14}, it is arguably more convenient to have weaking and
 contraction typing rules without the corresponding process forms.
 
-\begin{code}
-   cut       : ∀{Γ Γ₁ Γ₂ A B} (d : Dual A B) (p : Γ ≃ Γ₁ + Γ₂) →
-               Process (A ∷ Γ₁) → Process (B ∷ Γ₂) → Process Γ
-\end{code}
+% \begin{code}
+%    cut       : ∀{A Γ Γ₁ Γ₂} (p : Γ ≃ Γ₁ + Γ₂) →
+%                Process (A ∷ Γ₁) → Process (dual A ∷ Γ₂) → Process Γ
+
+%    all       : ∀{A Γ Δ} (p : Γ ≃ `∀ A , Δ) →
+%                ((B : Type) → Process (subst [ B /_] A ∷ Δ)) → Process Γ
+%    ex        : ∀{A B Γ Δ} (p : Γ ≃ `∃ A , Δ) →
+%                Process (subst [ B /_] A ∷ Δ) → Process Γ
+% \end{code}
 
 A \AgdaInductiveConstructor{cut} process incorporates a duality proof for the
 peer endpoints of the channel being restricted and a splitting proof that
 distributes the free channels among the two parallel processes.
-
-\end{AgdaAlign}
 
 Permutations preserve process typeability. In a sense we can read this property
 as the fact that we can rename channels at will.
@@ -163,26 +186,28 @@ as the fact that we can rename channels at will.
 #process : ∀{Γ Δ} → Γ # Δ → Process Γ → Process Δ
 \end{code}
 \begin{code}[hide]
-#process π (link d p) with #one+ π p
+#process π (link p) with #one+ π p
 ... | Δ′ , q , π′ with #singleton-inv π′
-... | refl = link d q
-#process π close with #singleton-inv π
-... | refl = close
+... | refl = link q
 #process π (fail p) with #one+ π p
 ... | Δ′ , q , π′ = fail q
 #process π (wait p P) with #one+ π p
 ... | Δ′ , q , π′ = wait q (#process π′ P)
-#process π (select x p P) with #one+ π p
-... | Δ′ , q , π′ = select x q (#process (#next π′) P)
+#process π close with #singleton-inv π
+... | refl = close
 #process π (case p P Q) with #one+ π p
 ... | Δ′ , q , π′ = case q (#process (#next π′) P) (#process (#next π′) Q)
+#process π (select x p P) with #one+ π p
+... | Δ′ , q , π′ = select x q (#process (#next π′) P)
+#process π (join p P) with #one+ π p
+... | Δ′ , q , π′ = join q (#process (#next (#next π′)) P)
 #process π (fork p q P Q) with #one+ π p
 ... | Δ′ , p′ , π′ with #split π′ q
 ... | Δ₁ , Δ₂ , q′ , π₁ , π₂ = fork p′ q′ (#process (#next π₁) P) (#process (#next π₂) Q)
-#process π (join p P) with #one+ π p
-... | Δ′ , q , π′ = join q (#process (#next (#next π′)) P)
-#process π (cut d p P Q) with #split π p
-... | Δ₁ , Δ₂ , q , π₁ , π₂ = cut d q (#process (#next π₁) P) (#process (#next π₂) Q)
+#process π (all p P) with #one+ π p
+... | Δ' , q , π' = all q λ B → #process (#next π') (P B)
+#process π (ex p P) with #one+ π p
+... | Δ' , q , π' = ex q (#process (#next π') P)
 #process π (server p un P) with #one+ π p
 ... | Δ′ , q , π′ = server q (#un π′ un) (#process (#next π′) P)
 #process π (client p P) with #one+ π p
@@ -191,4 +216,6 @@ as the fact that we can rename channels at will.
 ... | Δ′ , q , π′ = weaken q (#process π′ P)
 #process π (contract p P) with #one+ π p
 ... | Δ′ , q , π′ = contract q (#process (#next (#next π′)) P)
+#process π (cut p P Q) with #split π p
+... | Δ₁ , Δ₂ , q , π₁ , π₂ = cut q (#process (#next π₁) P) (#process (#next π₂) Q)
 \end{code}
